policy-ast: source locations in entity values